--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
+      "@components/*": ["./src/app/components/*"],
+      "@actions/*": ["./src/app/actions/*"],
+
       "orm": ["./orm/index.ts"]
     }
   },
