--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-admin-ts",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -20,6 +20,7 @@
     "@adminjs/express": "^6.1.1",
     "@adminjs/prisma": "^5.0.3",
     "@faker-js/faker": "^9.5.0",
+    "@sinclair/typebox": "^0.34.25",
     "@vitejs/plugin-react": "^4.3.4",
     "adminjs": "^7.8.15",
     "argon2": "^0.41.1",
@@ -48,6 +49,7 @@
     "nodemon": "^3.1.9",
     "ora": "^8.2.0",
     "postcss": "^8",
+    "sass": "^1.85.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5",
