--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-admin-ts",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,6 +10,10 @@
     "lint": "next lint",
     "orm:generate": "prisma generate",
     "orm:push": "prisma db push",
+    "test": "vitest --run",
+    "test:dev": "vitest",
+    "test:dev-ui": "vitest --ui",
+    "test:coverage": "vitest --run --coverage",
     "generate:admin": "tsx ./generate/admin.ts",
     "generate:env-types": "gen-env-types ./.env"
   },
@@ -21,6 +25,7 @@
     "@adminjs/prisma": "^5.0.3",
     "@faker-js/faker": "^9.5.0",
     "@sinclair/typebox": "^0.34.25",
+    "@testing-library/react": "^16.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "adminjs": "^7.8.15",
     "argon2": "^0.41.1",
@@ -35,6 +40,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
@@ -46,6 +53,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "gen-env-types": "^1.3.4",
+    "jsdom": "^26.0.0",
     "nodemon": "^3.1.9",
     "ora": "^8.2.0",
     "postcss": "^8",
