--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "generate:admin": "tsx ./generate/admin.ts",
     "generate:env-types": "gen-env-types ./.env"
   },
+  "prisma": {
+    "schema": "./orm/schema.prisma"
+  },
   "dependencies": {
     "@adminjs/express": "^6.1.1",
     "@adminjs/prisma": "^5.0.3",
+    "@adminjs/relations": "^1.1.2",
     "@adminjs/typeorm": "^5.0.1",
     "@adminjs/upload": "^4.0.2",
     "@faker-js/faker": "^9.5.0",
@@ -36,10 +40,12 @@
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
     "next-sitemap": "^4.2.3",
-    "prisma": "5.0.0",
+    "prisma": "^6.4.0",
     "prompts": "^2.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reflect-metadata": "^0.2.2",
+    "styled-components": "^6.1.15",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
