Улучшена организация файлов, добавлена интернализация, сделана загрузка options в файловые поля, сделана реакция на isRequired

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
       "@actions/*": ["./src/app/actions/*"],
       "@lib/*": ["./lib/*"],
       "@helpers/*": ["./src/app/helpers/*"],
-      "@utils/*": ["./src/utils/*"],
+      "@utils/*": ["./utils/*"],
+      "@resources/*": ["./resources/*"],
+      "resources": ["./resources/index.ts"],
       "orm": ["./orm/index.ts"]
     }
   },
