--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "schema": "./orm/schema.prisma"
   },
   "dependencies": {
+    "@adminjs/design-system": "^4.1.1",
     "@adminjs/express": "^6.1.1",
     "@adminjs/prisma": "^5.0.3",
     "@adminjs/typeorm": "^5.0.1",
